@@ -82,7 +82,7 @@ public class AmpReportFiltersConverter {
 		addFilter(ColumnConstants.PRIMARY_SECTOR, AmpSector.class, "selectedSectors", true);
 		addFilter(ColumnConstants.PRIMARY_SECTOR_SUB_SECTOR, AmpSector.class, "selectedSectors", false);
 		addFilter(ColumnConstants.PRIMARY_SECTOR_SUB_SUB_SECTOR, AmpSector.class, "selectedSectors", false);
-		addFilter(ColumnConstants.SECONDARY_SECTOR_ID, AmpSector.class, "selectedSecondarySectors", true);
+		addFilter(ColumnConstants.SECONDARY_SECTOR, AmpSector.class, "selectedSecondarySectors", true);
 		addFilter(ColumnConstants.SECONDARY_SECTOR_SUB_SECTOR, AmpSector.class, "selectedSecondarySectors", false);
 		addFilter(ColumnConstants.SECONDARY_SECTOR_SUB_SUB_SECTOR, AmpSector.class, "selectedSecondarySectors", false);
 		addFilter(ColumnConstants.TERTIARY_SECTOR, AmpSector.class, "selectedTertiarySectors", true);
@@ -177,29 +177,24 @@ public class AmpReportFiltersConverter {
 			Method setterMethod = AmpARFilter.class.getDeclaredMethod(getSetterName(ampARFilterFieldName), param);
 
 			// Get values from Reports API filters.
-			List<FilterRule> filterRules = this.filters.getAllFilterRules().get(new ReportElement(new ReportColumn(mondrianFilterColumnName)));
+			FilterRule filterRule = this.filters.getAllFilterRules().get(new ReportElement(new ReportColumn(mondrianFilterColumnName)));
 
-			if (filterRules != null) {
+			if (filterRule != null) {
 				if (paramClass.getName().equals("java.util.Set") || paramClass.getName().equals("java.util.Collection")) {
-					Set<Object> values = null;
-					values = new HashSet();
-					Iterator<FilterRule> iFilterRules = filterRules.iterator();
-					while (iFilterRules.hasNext()) {
-						FilterRule auxFilterRule = iFilterRules.next();
-						if (auxFilterRule.values != null) {
-							Iterator<String> iValues = auxFilterRule.values.iterator();
-							while (iValues.hasNext()) {
-								String auxValue = iValues.next();
-								if (ampARFilterFieldClass.toString().equals("class java.lang.String")) {
-									values.add(auxValue);
-								} else if (ampARFilterFieldClass.toString().equals("class java.lang.Integer")) {
-									values.add(Integer.valueOf(auxValue));
-								} else if (ampARFilterFieldClass.toString().equals("class java.lang.Double")) {
-									values.add(Double.valueOf(auxValue));
-								} else {
-									Object auxEntity = session.load(ampARFilterFieldClass, new Long(auxValue));
-									values.add(auxEntity);	
-								}
+					Set<Object> values = new HashSet();
+					if (filterRule.values != null) {
+						Iterator<String> iValues = filterRule.values.iterator();
+						while (iValues.hasNext()) {
+							String auxValue = iValues.next();
+							if (ampARFilterFieldClass.toString().equals("class java.lang.String")) {
+								values.add(auxValue);
+							} else if (ampARFilterFieldClass.toString().equals("class java.lang.Integer")) {
+								values.add(Integer.valueOf(auxValue));
+							} else if (ampARFilterFieldClass.toString().equals("class java.lang.Double")) {
+								values.add(Double.valueOf(auxValue));
+							} else {
+								Object auxEntity = session.load(ampARFilterFieldClass, new Long(auxValue));
+								values.add(auxEntity);
 							}
 						}
 					}
@@ -215,14 +210,14 @@ public class AmpReportFiltersConverter {
 					setterMethod.invoke(this.ampARFilter, values);
 					logger.info("Found filter: " + mondrianFilterColumnName + " with values: " + values.toString());
 				} else if (paramClass.getName().equals("java.lang.String")) {
-					setterMethod.invoke(this.ampARFilter, filterRules.toString());
-					logger.info("Found filter: " + mondrianFilterColumnName + " with values: " + filterRules.toString());
+					setterMethod.invoke(this.ampARFilter, filterRule.toString());
+					logger.info("Found filter: " + mondrianFilterColumnName + " with values: " + filterRule.toString());
 				} else if (paramClass.getName().equals("java.lang.Integer")) {
-					setterMethod.invoke(this.ampARFilter, Integer.valueOf(filterRules.toString()));
-					logger.info("Found filter: " + mondrianFilterColumnName + " with values: " + filterRules.toString());
+					setterMethod.invoke(this.ampARFilter, Integer.valueOf(filterRule.toString()));
+					logger.info("Found filter: " + mondrianFilterColumnName + " with values: " + filterRule.toString());
 				} else if (paramClass.getName().equals("java.lang.Double")) {
-					setterMethod.invoke(this.ampARFilter, Double.valueOf(filterRules.toString()));
-					logger.info("Found filter: " + mondrianFilterColumnName + " with values: " + filterRules.toString());
+					setterMethod.invoke(this.ampARFilter, Double.valueOf(filterRule.toString()));
+					logger.info("Found filter: " + mondrianFilterColumnName + " with values: " + filterRule.toString());
 				} else {
 					throw new RuntimeException(paramClass.getName());
 				}
@@ -246,11 +241,10 @@ public class AmpReportFiltersConverter {
 			} else {
 				filterElement = new ReportElement(new ReportColumn(mondrianFilterColumnName));
 			}
-			List<FilterRule> filterRules = this.filters.getAllFilterRules().get(filterElement);
-			if (filterRules != null) {
-				FilterRule auxFilterRule = (FilterRule) filterRules.toArray()[0];
-				String fromDate = originalFormat.format(DateTimeUtil.fromJulianNumberToDate(auxFilterRule.min));
-				String toDate = originalFormat.format(DateTimeUtil.fromJulianNumberToDate(auxFilterRule.max));
+			FilterRule filterRule = this.filters.getAllFilterRules().get(filterElement);
+			if (filterRule != null) {
+				String fromDate = originalFormat.format(DateTimeUtil.fromJulianNumberToDate(filterRule.min));
+				String toDate = originalFormat.format(DateTimeUtil.fromJulianNumberToDate(filterRule.max));
 
 				// Use reflection to call the setter.
 				setterFromMethod.invoke(this.ampARFilter, fromDate);
